Closed Bug 378464 Opened 17 years ago Closed 17 years ago

When session saving is off, opening the application from a link opens too many tab/windows

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: froodian, Assigned: murph)

References

Details

(Keywords: fixed1.8.1.4, regression)

Attachments

(1 file)

1.71 KB, patch
froodian
: review+
stuart.morgan+bugzilla
: superreview+
Details | Diff | Splinter Review
Presumably a regression from bug 364497. First reported here: http://forums.mozillazine.org/viewtopic.php?t=542632 STR: 1. Make sure session saving is off. 2. Quit the app. 3. Open the app via a link What happens: A window is created (with the home page or about:blank, as expected for new windows), and then the URL is opened in a new tab/window (based on the external apps pref) What should happen: We should only load the URL A case could be made that when the user has set the pref to open the home page in new windows, this is expected behavior. However, it's certainly undesired when new windows open to about:blank and then we load the desired URL in a new tab/window regardless.
Flags: camino1.5?
(In reply to comment #0) > Presumably a regression from bug 364497. Yep, it must be. I'll take a look and get this behavior back to the way it was before bug 364497.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Sorry, that closing was accidental. My palm hit the trackpad right when I was submitting the previous comment and mistakingly performed a click on the FIXED button.
Assignee: nobody → murph
Status: REOPENED → NEW
Attached patch patchSplinter Review
When I moved the application's initialization routines into |ensureInitializationCompleted| as part of bug 364497, I carried along the opening of an initial window and the default browser check as well. This prompted the start page to load every time because URLs opening during launch have not yet been processed at this point. Even without the buggy behavior those two steps are best left for applicationDidFinishLaunching anyway, as they're not crucial or required for initialization.
Attachment #262532 - Flags: review?
Target Milestone: --- → Camino1.5
Attachment #262532 - Flags: superreview?(stuart.morgan)
Attachment #262532 - Flags: review?(froodian)
Attachment #262532 - Flags: review?
Attachment #262532 - Flags: review+
Comment on attachment 262532 [details] [diff] [review] patch sr=smorgan
Attachment #262532 - Flags: superreview?(stuart.morgan) → superreview+
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 17 years ago17 years ago
Flags: camino1.5? → camino1.5+
Keywords: fixed1.8.1.4
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: