Camino only - Bug 378464: When session saving is off, opening the application from a link opens too many tab/windows. Patch by Sean Murphy <murph@seanmurph.com> r=me sr=smorgan